src/test/ui/closures/closure-reform-bad.stderr
error[E0308]: mismatched types
  --> $DIR/closure-reform-bad.rs:11:15
   |
LL |     let f = |s: &str| println!("{}{}", s, string);
   |             ------------------------------------- the found closure
LL |     call_bare(f)
   |               ^ expected fn pointer, found closure
   |
   = note: expected fn pointer `for<'r> fn(&'r str)`
                 found closure `[closure@$DIR/closure-reform-bad.rs:10:13: 10:50]`
note: closures can only be coerced to `fn` types if they do not capture any variables
  --> $DIR/closure-reform-bad.rs:10:43
   |
LL |     let f = |s: &str| println!("{}{}", s, string);
   |                                           ^^^^^^ `string` captured here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
